--- a/style/app.css
+++ b/style/app.css
@@ -1,112 +1,115 @@
-*{
-	margin:0;
-	padding: 0;
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-}
-body {
-    font-family: Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+  }
+  body {
+    font-family: Helvetica, Roboto, Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     color: inherit;
-    text-rendering: optimizeLegibility;
     background: #111;
-}
-a{
-	cursor: pointer;
-}
-img{
-	max-width: 100%;
-}
-
-#mainVideo {
+  }
+  a {
+    cursor: pointer;
+  }
+  img {
+    max-width: 100%;
+  }
+  
+  #mainVideo {
     background: #ccc;
     padding: 20px;
-}
-
-.mainvideo-inner {
+  }
+  
+  .mainvideo-inner {
     margin: 0 auto;
     max-width: 1000px;
     width: 100%;
-}
-
-.main-frame {
+  }
+  
+  .main-frame {
     position: relative;
     padding-bottom: 56.25%;
     /* 16:9 */
     padding-top: 20px;
     height: 0;
-}
-
-.main-frame iframe {
+  }
+  
+  .main-frame iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-.video-list {
+  }
+  
+  .video-list {
     margin: 0 auto;
     margin-top: 20px;
     max-width: 1000px;
     width: 100%;
     position: relative;
-    padding-bottom:70px;
-}
-
-.video-list h5 {
+    padding-bottom: 70px;
+  }
+  
+  .video-list h5 {
     font-size: 15px;
     margin-top: 15px;
     color: #f0f0f0;
     font-weight: normal;
-}
-
-.swiper-container {
+  }
+  
+  .swiper-container {
     position: static;
-}
-
-.swiper-button-prev {
+  }
+  
+  .swiper-button-prev {
     left: -50px;
-    top:25%;
-}
-
-.swiper-button-next {
+    top: 25%;
+  }
+  
+  .swiper-button-next {
     right: -50px;
-    top:25%;
-}
-.swiper-pagination-bullet{
-	background: #cecece;
-}
-.error-loading{
-	font-size: 22px;
-	text-align: center;
-	padding: 10% 20px;
-	text-transform: uppercase;
-	position: fixed;
-	left: 0;
-	right:0;
-	top: 0;
-	background: rgba(255, 0, 0, 0.75);
-	color: #fff;
-	display: none;
-	bottom: 0;
-}
-body.error .video-list{
-	display: none;
-}
-@media all and (max-width:1023px) {
+    top: 25%;
+  }
+  .swiper-pagination-bullet {
+    background: #cecece;
+  }
+  .error-loading {
+    font-size: 22px;
+    text-align: center;
+    padding: 10% 20px;
+    text-transform: uppercase;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    background: rgba(255, 0, 0, 0.75);
+    color: #fff;
+    display: none;
+    bottom: 0;
+  }
+  body.error .error-loading {
+    display: block;
+  }
+  body.error .video-list {
+    display: none;
+  }
+  @media all and (max-width: 1023px) {
     .video-list {
-        padding: 0 50px;
+      padding: 0 50px;
     }
     .swiper-button-prev {
-        left: 10px;
+      left: 10px;
     }
     .swiper-button-next {
-        right: 10px;
+      right: 10px;
     }
-    .swiper-pagination{
-    	display: none;
+    .swiper-pagination {
+      display: none;
     }
-}
+  }
+  
